--- a/src/main/resources/templates/createOrder.html
+++ b/src/main/resources/templates/createOrder.html
@@ -41,9 +41,9 @@
         </div>
         <br>
         <br>
-        <a th:href="@{/instruments}">
+<!--        <a th:href="@{/instruments/create-order/{shortName}(shortName=${instrument.shortName})}">-->
             <button type="submit" class="btn btn-primary">Submit</button>
-        </a>
+<!--        </a>-->
     </form>
 </div>
 </body>
