--- a/src/main/resources/templates/orderBook.html
+++ b/src/main/resources/templates/orderBook.html
@@ -34,7 +34,7 @@
         </td>
     </tr>
 </table>
-<a th:href="@{/instruments/create-order/{shortName}(shortName=${instrument.shortName})}">
+<a th:href="@{/create-order/{shortName}(shortName=${instrument.shortName})}">
 <button type="button" class="btn btn-primary btn-lg btn-block">CREATE NEW ORDER</button>
 </a>
 </body>
