--- a/src/main/resources/templates/message.html
+++ b/src/main/resources/templates/message.html
@@ -14,7 +14,7 @@
   </ul>
 </div>
 <div style="margin:50px">
-  <a href="/instruments">
+  <a href="/">
     <button type="button" class="btn btn-primary">Home</button>
   </a>
 </div>
